# poNES

./: .gitignore  CMakeLists.txt  LICENSE  custom.palette  readme.md
src/: cart.c  cart.h  device.c  device.h  disassembler.c  disassembler.h  helpers.c  helpers.h  instructions.c  instructions.h  main.c  memory.c  ppu.c  ppu.h
src/cart/: cart.c  cart.h  ines.h
src/device/: color_palette.h  cpu.c  cpu.h  cpu_instr_impl.c  cpu_instr_impl.h  device.c  device.h  disassembler.h  instructions.c  instructions.h  memory.c  memory.h  memory_bus.c  memory_bus.h  memory_map.h  ppu.c  ppu.h  ram.c  ram.h
src/device/cart/: cart.c  cart.h  ines.c
src/device/mapper/: mapper.c
src/device/ppu/: color_palette.c  ppu.c  ppu.h  ppu_memory_bus.c  ppu_memory_bus.h  ppu_memory_map.h  ppu_reg.c  ppu_reg.h
src/mapper/: mapper.h
src/platform/: platform.c  platform.h
src/platform/glad/include/glad/: glad.h
src/platform/glad/src/: glad.c
